--- a/app_test/styles/globals.css
+++ b/app_test/styles/globals.css
@@ -15,6 +15,10 @@ a {
   box-sizing: border-box;
 }
 
+nav:hover{
+  color:dimgrey;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
