--- a/pokemon-api/src/App.css
+++ b/pokemon-api/src/App.css
@@ -1,16 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 .App {
   text-align: center;
 }
@@ -38,7 +25,8 @@ code {
 }
 
 .App-link {
-  color: #61dafb;|
+  color: #61dafb;
+}
 
 @keyframes App-logo-spin {
   from {
